--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged && jest"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
