chore(workflow/develop): add env secrets from repo

--- a/.versionrc
+++ b/.versionrc
@@ -5,7 +5,7 @@
   "types": [
     {"type": "feat", "section": "✨ Features"},
     {"type": "fix", "section": "\uD83D\uDC1B Bug Fixes"},
-    {"type": "chore", "section": "👨‍💻 Chores", "hidden": true},
+    {"type": "chore", "section": "👨‍💻 Chores", "hidden": false},
     {"type": "docs", "section": "\uD83D\uDCDD Docs", "hidden": false},
     {"type": "refactor", "section": "♻️Refactors", "hidden": false},
     {"type": "test", "section": "🧪 Tests", "hidden": true},
