--- a/package.json
+++ b/package.json
@@ -120,8 +120,7 @@
   },
   "lint-staged": {
     "*.{ts,json,md}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "@pika/pack": {
@@ -151,9 +150,5 @@
         }
       ]
     ]
-  },
-  "engines": {
-    "node": "14.4.0",
-    "npm": "6.14.5"
   }
 }
